# clientservermatching

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml  openapi.yml
.github/workflows/: ci.yml  docker.yaml
client/: CMakeLists.txt  Makefile  client.cpp
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
postgresql/schemas/: db-1.sql
src/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp
src/handlers/add-order/: add-order.cpp  add-order.hpp
src/handlers/balance/: balance.cpp  balance.hpp
src/handlers/delete-order/: delete-order.cpp  delete-order.hpp
src/handlers/get-deals/: get-deals.cpp  get-deals.hpp
src/handlers/get-order/: get-order.cpp  get-order.hpp
src/handlers/get-orders/: get-orders.cpp  get-orders.hpp
src/handlers/lib/: auth.cpp  auth.hpp
src/handlers/login/: login.cpp  login.hpp
src/handlers/register/: register.cpp  register.hpp
src/models/: balance.cpp  balance.hpp  deal.cpp  deal.hpp  order.cpp  order.hpp  session.hpp  user.cpp  user.hpp
src/service/: match_orders.cpp  match_orders.hpp
tests/: conftest.py  test_add_order.py  test_balance.py  test_basic.py  test_get_deals.py  test_get_orders.py  test_login.py  test_partial_fill.py  test_register.py
